--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.1",
     "@tailwindcss/postcss": "^4.1.1",
-    "@tailwindcss/vite": "^4.1.1",
+    "@tailwindcss/vite": "^4.1.2",
     "framer-motion": "^12.6.3",
     "maath": "^0.10.8",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-parallax-tilt": "^1.7.289",
     "react-router-dom": "^7.4.1",
-    "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.5.3",
-    "tailwindcss": "^4.1.1"
+    "tailwindcss": "^4.1.2",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
