--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/postcss": "^4.1.1",
     "@tailwindcss/vite": "^4.1.2",
     "framer-motion": "^12.6.3",
+    "html-react-parser": "^5.2.3",
     "maath": "^0.10.8",
     "postcss": "^8.5.3",
     "prop-types": "^15.8.1",
