--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@tailwindcss/vite": "^4.1.2",
     "framer-motion": "^12.6.3",
     "html-react-parser": "^5.2.3",
+    "i18next": "^25.6.0",
     "maath": "^0.10.8",
     "postcss": "^8.5.3",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^16.2.0",
     "react-parallax-tilt": "^1.7.289",
     "react-router-dom": "^7.4.1",
     "react-vertical-timeline-component": "^3.5.3",
